master/course/content/dockercoins/etc/kubernetes/manifests/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - 
        image: docker.io/library/redis:latest
        name: redis
        ports:
        - 
          containerPort: 6379
          protocol: TCP
        resources:
          limits:
            cpu: 40m
            memory: 40M
          requests:
            cpu: 20m
            memory: 20M
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        -
          mountPath: /data/
          name: redis
          readOnly: false
        workingDir: /data/
      imagePullSecrets:
      - name: docker
  volumeClaimTemplates:
  - 
    metadata:
      name: redis
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
