master/course/content/dockercoins/etc/kubernetes/manifests/svc-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
  - 
    port: 6379
    targetPort: 6379
  selector:
    app: redis
  type: ClusterIP
