master/course/content/dockercoins/etc/kubernetes/manifests/svc-rng.yaml
apiVersion: v1
kind: Service
metadata:
  name: rng
spec:
  ports:
  - 
    port: 80
    targetPort: 9000
  selector:
    app: hasher
  type: ClusterIP
