master/course/content/dockercoins/etc/kubernetes/manifests/svc-webui.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui
spec:
  ports:
  - 
    port: 80
    targetPort: 9000
  selector:
    app: webui
  type: ClusterIP
