master/course/content/dockercoins/etc/kubernetes/manifests/netpol-rng.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rng
spec:
  ingress:
  -
    from:
    -
      podSelector:
        matchLabels:
          app: worker
    ports:
    -
      port: 9000
      protocol: TCP
  podSelector:
    matchLabels:
      app: rng
  policyTypes:
  - Ingress
