master/course/content/dockercoins/etc/kubernetes/manifests/np-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis
spec:
  ingress:
  -
    from:
    -
      podSelector:
        matchLabels:
          app: webui
    ports:
    -
      port: 6379
      protocol: TCP
  -
    from:
    -
      podSelector:
        matchLabels:
          app: worker
    ports:
    -
      port: 6379
      protocol: TCP
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
