master/course/content/dockercoins/etc/kubernetes/manifests/np-rng.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: rng
spec:
  ingress:
  -
    from:
    -
      podSelector:
        matchLabels:
          app: worker
    ports:
    -
      port: 9000
      protocol: TCP
  podSelector:
    matchLabels:
      app: rng
  policyTypes:
  - Ingress
