master/course/content/dockercoins/etc/kubernetes/manifests/np-webui.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webui
spec:
  ingress:
  -
    from:
    -
      namespaceSelector:
        matchLabels:
          name: openshift-ingress
      podSelector:
        matchLabels:
          ingresscontroller.operator.openshift.io/deployment-ingresscontroller: default
    ports:
    -
      port: 9000
      protocol: TCP
  podSelector:
    matchLabels:
      app: webui
  policyTypes:
  - Ingress
